# vector-correlation

./: .gitignore  CMakeLists.txt  README.md  config.sh  environment.sh
scripts/: excel_to_csv.py
src/: CMakeLists.txt  blocked_image_auto_correlation.cc  blocked_image_auto_correlation.h  blocked_image_correlation.cc  blocked_image_correlation.h  blocked_image_mean.cc  blocked_image_mean.h  common_types.h  complex_math.cc  complex_math.h  error.txt  image_magnitude.cc  image_magnitude.h  main.cc  vector_correlation.cc  vector_correlation.h  vector_correlation_analysis.cc  vector_correlation_analysis.h
test/: CMakeLists.txt  test_blocked_image_auto_correlation.cc  test_blocked_image_correlation.cc  test_blocked_image_mean.cc  test_complex_math.cc  test_image_magnitude.cc  test_vector_correlation.cc  vector_correlation_main.cc
